# kq

./: .gitignore  README.md  pyproject.toml
src/kq/: __init__.py  auth.py  cli.py  client.py  config.py  registry.py
src/kq/queries/: examples.yaml
